2001-12-06  Darin Adler  <darin@bentspoon.com>

	Apply patch by Martin Wehner to fix crashes when hitting escape
	when the copy progress dialog is up.

	* libnautilus-private/nautilus-file-operations-progress.c:
	(close_callback):
	* libnautilus-private/nautilus-file-operations.c:
	(handle_close_callback):
	Return TRUE so it knows not to close the dialog.

2001-11-29  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-directory-async.c:
	(top_left_read_callback): Zero out text to avoid a double free.

2001-11-16  Yanko Kaneti  <yaneti@declera.com>

        * configure.in (ALL_LINGUAS): Added bg (Bulgarian).

2001-11-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libnautilus-private/nautilus-volume-monitor.c:
	(volume_is_automounted), (mount_volume_deactivate):
	Add detection of automounted volume, don't eject automounted CDROMs

	* libnautilus-private/nautilus-volume-monitor.c:
	(nautilus_volume_monitor_set_volume_name):
	Fix search for volume to modify

2001-11-10  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* components/help/hyperbola-nav-index.c:
	* components/help/hyperbola-nav-tree.c:
	Include <config.h> so that localization works

2001-11-08  Darin Adler  <darin@bentspoon.com>
	
	Patch from Peter Snyder <kafer77a@ameritech.net> to add a
	disclaimer to the text view to make it clear that it's a read-only
	view of the text.

	* components/text/nautilus-text-view.c:
	(nautilus_text_view_initialize): Add a label with a disclaimer.

2001-11-08  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-error-reporting.c:
	(fm_report_error_loading_directory),
	(fm_report_error_renaming_file), (fm_report_error_setting_group),
	(fm_report_error_setting_owner),
	(fm_report_error_setting_permissions):
	Stop telling people to tell John Sullivan about these errors.

2001-11-08  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-icon-dnd.c 
	(nautilus_icon_dnd_update_drop_target): Plug a leak.

=== nautilus 1.0.6 ===
